--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~10.1.2",
     "@angular/material": "^10.2.7",
+    "@angular/material-moment-adapter": "^11.2.4",
     "@angular/platform-browser": "~10.1.2",
     "@angular/platform-browser-dynamic": "~10.1.2",
     "@angular/router": "~10.1.2",
@@ -27,6 +28,7 @@
     "@ngrx/store": "^11.0.1",
     "@ngrx/store-devtools": "^11.0.1",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
